kanidm/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm-staging
  labels:
    app: kanidm-staging
spec:
  type: NodePort
  selector:
    app: kanidm-staging
  ports:
  - port: 8000
    targetPort: 8000
