kanidm/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanidm-staging
  annotations:
    cert-manager.io/issuer: letsencrypt
  labels:
    r53Challenge: "true"
spec:
  tls:
  - hosts:
    - kanidm.staging.wobscale.website
    secretName: kanidm-staging-cert
  rules:
  - host: kanidm.staging.wobscale.website
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kanidm-staging
            port:
              number: 8000
